Fixed spacing in actions box template, added right margin to archives icon

--- a/app/assets/stylesheets/_context_navigation.scss
+++ b/app/assets/stylesheets/_context_navigation.scss
@@ -60,6 +60,10 @@
   justify-content: center;
 }
 
+.al-actions-box-container .bi-archive-fill {
+  margin-right: 0.5rem;
+}
+
 #context {
   .tab-pane {
     padding: 0;
